src/pages/Jot/index.module.scss
.Jot {
    composes: RouteWrapper from global;
    display: flex;
    flex-direction: column;
    height: 100%;
    padding: 0;

    &__NoticeWrapper {
        padding: 40px 0;
    }

    &__CollectionNotice {
        text-align: center;
        font-size: var(--fontSizeMd);
        font-style: italic;
        color: var(--colSub);
    }

    &__List {
        display: flex;
        flex-direction: column;
        gap: 0.25rem;

        &--Expanded {
            gap: 1rem;
        }
    }
}

